--- a/core/sh/templates/dependency/create.html
+++ b/core/sh/templates/dependency/create.html
@@ -12,7 +12,7 @@
 <div class="form-group">
     <div class="mt-2">
         <label for="location_id">Localidad:</label>
-        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
+        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="location_modal_add"><i class="fas fa-plus"></i></button>
     </div>
     {{ form.location }}
     {% if form.location.errors %}
@@ -39,7 +39,7 @@
 
 {% block modals %}
 <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
-    <form method="post" action="{%url 'sh:location_add'%}" id="locationForm">
+    <form method="post" action="{%url 'sh:location_modal_add'%}" id="locationModalForm">
         {% csrf_token %}
         <div class="modal-dialog">
             <div class="modal-content">
@@ -51,14 +51,24 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="province">Provincia: </label>
+                        <label for="id_modal_province_select">Provincia: </label>
                         <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="province_add_from_location"><i class="fas fa-plus"></i></button>
-                        {{ location_add.province }}
+                        {{ location_modal_add.province }}
+                        {% if location_modal_add.province.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ location_modal_add.province.errors|join:'<br>' }}
+                        </div>
+                        {% endif %}
                     </div>
-                    <div class="form-group">
-                        <label for="location">Localidad:</label>
-                        {{ location_add.location }}
-                    </div>
+                  <div class="form-group">
+                      <label for="id_modal_location_input">Localidad:</label>
+                      {{ location_modal_add.location }}
+                      {% if location_modal_add.location.errors %}
+                      <div class="invalid-feedback d-block">
+                          {{ location_modal_add.location.errors|join:'<br>' }}
+                      </div>
+                      {% endif %}
+                  </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
@@ -72,7 +82,7 @@
 
 {% block modal_in %}
 <div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="provinceModalLabel" aria-hidden="true">
-  <form method="post" action="{%url 'sh:province_add'%}" id="provinceForm"> {% csrf_token %}
+  <form method="post" action="{%url 'sh:province_modal_add'%}" id="provinceModalForm"> {% csrf_token %}
       <div class="modal-dialog">
           <div class="modal-content">
               <div class="modal-header">
@@ -82,20 +92,23 @@
                   </button>
               </div>
               <div class="modal-body">
-                <div class="container-fluid">
-                  <input name="action" type="hidden" value="add">
-                  {% csrf_token %}
-                  {% for field  in province_add.visible_fields  %}
-                  <div class="form-group">
-                    <label for="{{ field.name }}">{{ field.label }}</label>
-                    {{ field }}
-                    {% if field.errors %}
-                      <div class="invalid-feedback d-block">
-                        {{ field.errors|join:'<br>' }}
-                      </div>
+                <div class=form-group">
+                    <label for="id_modal_province_number"> Número de Distrito: </label>
+                    {{province_modal_add.number_id}}
+                    {% if province_modal_add.number_id.errors %}
+                    <div class="invalid-feedback d-block">
+                        {{ province_modal_add.number_id.errors|join:'<br>' }}
+                    </div>
                     {% endif %}
-                  </div>
-                  {% endfor %}
+                </div>
+                <div class="form-group">
+                    <label for="id_modal_province_input" class="mt-2">Provincia: </label>
+                    {{province_modal_add.province}}
+                    {% if province_modal_add.province.errors %}
+                    <div class="invalid-feedback d-block">
+                        {{ province_modal_add.province.errors|join:'<br>' }}
+                    </div>
+                    {% endif %}
                 </div>
               </div>
               <div class="modal-footer">
