--- a/core/sh/templates/location/create.html
+++ b/core/sh/templates/location/create.html
@@ -13,7 +13,7 @@
 {% block form %}
 <div class="form-group">
     <label for="province">Provincia: </label>
-    <button type="button" class="btn btn-sm {{btn_color}} ml-2 mb-1" id="province_add"><i class="fas fa-plus"></i></button>
+    <button type="button" class="btn btn-sm {{btn_color}} ml-2 mb-1" id="province_modal_add"><i class="fas fa-plus"></i></button>
   {{ form.province }}
   {% if form.province.errors %}
     <div class="invalid-feedback d-block">
@@ -40,7 +40,7 @@
 {% block modals %}
 <!-- Modal -->
 <div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="provinceModalLabel">
-    <form method="post" action="{%url 'sh:province_add'%}" id="provinceForm">
+    <form method="post" action="{%url 'sh:province_modal_add'%}" id="provinceForm">
         {% csrf_token %}
         <div class="modal-dialog">
             <div class="modal-content">
@@ -52,12 +52,22 @@
                 </div>
                 <div class="modal-body">
                     <div class=form-group">
-                        <label for="number_id"> Número de Distrito: </label>
-                        {{province_add.number_id}}
+                        <label for="id_modal_province_number"> Número de Distrito: </label>
+                        {{province_modal_add.number_id}}
+                        {% if province_modal_add.number_id.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ province_modal_add.number_id.errors|join:'<br>' }}
+                        </div>
+                        {% endif %}
                     </div>
                     <div class="form-group">
-                        <label for="province">Provincia: </label>
-                        {{province_add.province}}
+                        <label for="id_modal_province_input" class="mt-2">Provincia: </label>
+                        {{province_modal_add.province}}
+                        {% if province_modal_add.province.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ province_modal_add.province.errors|join:'<br>' }}
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="modal-footer">
