--- a/core/sh/templates/office_loc/create.html
+++ b/core/sh/templates/office_loc/create.html
@@ -9,72 +9,79 @@
 {% endblock extra_refs %}
 
 {% block form %}
-<div class="row">
+<div classs="row">
     <div class="container">
-        <div class="card text-white bg-secondary mt-1">
-            <div class="card-header">
-                Filtros <i class="fas fa-filter"></i>
-            </div>
-            <div class="card-body row">
-                <div class="form-group col-6">
-                    <label for="id_province">Provincia:</label> <button type="button" class="btn btn-sm btn-dark ml-2 mb-1" id="province_add"><i class="fas fa-plus"></i></button>
-                    {{ form.province }}
-                    {% if form.province.errors %}
-                    <div class="invalid-feedback d-block">
-                        {{ form.province.errors|join:"<br>" }}
+        <button id="toggle-edifice-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros <i class="fa fa-filter"></i></button>
+        <div id="filter-edifice-cards" class="d-none">
+            <div class="row">
+                <div class="container">
+                    <div class="card text-white bg-secondary my-1">
+                        <div class="card-header">
+                            Filtrar por Provincia y Localidad
+                        </div>
+                        <div class="card-body row">
+                            <div class="form-group col-6">
+                                <label for="id_province">Provincia:</label>
+                                {{ form.province }}
+                                {% if form.province.errors %}
+                                <div class="invalid-feedback d-block">
+                                    {{ form.province.errors|join:"<br>" }}
+                                </div>
+                                {% endif %}
+                            </div>
+                            <div class="form-group col-6">
+                                <label for="id_location">Localidad:</label>
+                                {{ form.location }}
+                                {% if form.location.errors %}
+                                <div class="invalid-feedback d-block">
+                                    {{ form.location.errors|join:"<br>" }}
+                                </div>
+                                {% endif %}
+                            </div>
+                        </div>
                     </div>
-                    {% endif %}
-                </div>
-                <div class="form-group col-6">
-                    <label for="id_location">Localidad:</label> <button type="button" class="btn btn-sm btn-dark ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
-                    {{ form.location }}
-                    {% if form.location.errors %}
-                    <div class="invalid-feedback d-block">
-                        {{ form.location.errors|join:"<br>" }}
-                    </div>
-                    {% endif %}
                 </div>
             </div>
         </div>
-    </div>
-</div>
 
-<div class="form-group">
-    <div class="mt-2">
-        <label for="id_edifice_main">Edificio: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="edifice_add"><i class="fas fa-plus"></i></button>
-    </div>
-    {{ form.edifice }}
-    {% if form.edifice.errors %}
-    <div class="invalid-feedback d-block">
-        {{ form.edifice.errors|join:"<br>" }}
-    </div>
-    {% endif %}
-</div>
+        <div class="form-group">
+            <div class="mt-2">
+                <label for="id_edifice_main">Edificio: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="edifice_modal_add"><i class="fas fa-plus"></i></button>
+            </div>
+            {{ form.edifice }}
+            {% if form.edifice.errors %}
+            <div class="invalid-feedback d-block">
+                {{ form.edifice.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+        </div>
 
-<div class="form-group">
-    <label for="id_floor">Piso:</label>
-    {{ form.floor }}
-    {% if form.floor.help_text %}
-    <small class="form-text text-muted">{{form.floor.help_text}}</small>
-    {% endif %}
-    {% if form.floor.errors %}
-    <div class="invalid-feedback d-block">
-        {{ form.floor.errors|join:"<br>" }}
-    </div>
-    {% endif %}
-</div>
+        <div class="form-group">
+            <label for="id_floor">Piso:</label>
+            {{ form.floor }}
+            {% if form.floor.help_text %}
+            <small class="form-text text-muted">{{form.floor.help_text}}</small>
+            {% endif %}
+            {% if form.floor.errors %}
+            <div class="invalid-feedback d-block">
+                {{ form.floor.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+        </div>
 
-<div class="form-group">
-    <label for="id_connection_type">Ala:</label>
-    {{ form.wing }}
-    {% if form.wing.help_text %}
-    <small class="form-text text-muted">{{form.wing.help_text}}</small>
-    {% endif %}
-    {% if form.wing.errors %}
-    <div class="invalid-feedback d-block">
-        {{ form.wing.errors|join:"<br>" }}
+        <div class="form-group">
+            <label for="id_connection_type">Ala:</label>
+            {{ form.wing }}
+            {% if form.wing.help_text %}
+            <small class="form-text text-muted">{{form.wing.help_text}}</small>
+            {% endif %}
+            {% if form.wing.errors %}
+            <div class="invalid-feedback d-block">
+                {{ form.wing.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+        </div>
     </div>
-    {% endif %}
 </div>
 
 {% endblock form %}
@@ -86,7 +93,7 @@
 
 {% block modals %}
 <div class="modal fade" id="edificeModal" tabindex="-1" aria-labelledby="edificeModalLabel" aria-hidden="true">
-    <form method="post" action="{% url 'sh:edifice_add' %}" id="edificeForm">  {% csrf_token %}
+    <form method="post" action="{% url 'sh:edifice_modal_add' %}" id="edificeModalForm">  {% csrf_token %}
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -97,16 +104,16 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="id_location_edifice_modal">Localidad: </label>
-                        {{ edifice_add.location }}
+                        <label for="id_modal_location_select">Localidad: </label> <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="location_add_from_edifice_modal"><i class="fas fa-plus"></i></button>
+                        {{ edifice_modal_add.location }}
                     </div>
                     <div class="form-group">
-                        <label for="id_edifice_edifice_modal">Edificio: </label>
-                        {{ edifice_add.edifice }}
+                        <label for="id_modal_edifice_input">Edificio: </label>
+                        {{ edifice_modal_add.edifice }}
                     </div>
                     <div class="form-group">
-                        <label for="id_address_edifice_modal">Domicilio: </label>
-                        {{ edifice_add.address }}
+                        <label for="id_modal_edifice_address">Domicilio: </label>
+                        {{ edifice_modal_add.address }}
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -117,9 +124,12 @@
         </div>
     </form>
 </div>
+{% endblock modals %}
 
+{% block modal_in %}
 <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
-    <form method="post" action="{% url 'sh:location_add' %}" id="locationForm">  {% csrf_token %}
+    <form method="post" action="{%url 'sh:location_modal_add'%}" id="locationModalForm">
+        {% csrf_token %}
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -130,12 +140,13 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="id_province_location_modal">Provincia: </label>
-                        {{ location_add.province }}
+                        <label for="id_modal_province_select">Provincia: </label>
+                        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="province_add_from_location_modal"><i class="fas fa-plus"></i></button>
+                        {{ location_modal_add.province }}
                     </div>
                     <div class="form-group">
-                        <label for="id_location_location_modal">Localidad:</label>
-                        {{ location_add.location }}
+                        <label for="id_modal_location_input">Localidad:</label>
+                        {{ location_modal_add.location }}
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -148,7 +159,7 @@
 </div>
 
 <div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="provinceModalLabel" aria-hidden="true">
-    <form method="post" action="{% url 'sh:province_add' %}" id="provinceForm"> {% csrf_token %}
+    <form method="post" action="{%url 'sh:province_modal_add'%}" id="provinceModalForm"> {% csrf_token %}
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -158,20 +169,13 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="container-fluid">
-                        <input name="action" type="hidden" value="add">
-                        {% csrf_token %}
-                        {% for field  in province_add.visible_fields  %}
-                        <div class="form-group">
-                            <label for="{{ field.name }}">{{ field.label }}</label>
-                            {{ field }}
-                            {% if field.errors %}
-                            <div class="invalid-feedback d-block">
-                                {{ field.errors|join:'<br>' }}
-                            </div>
-                            {% endif %}
-                        </div>
-                        {% endfor %}
+                    <div class=form-group">
+                        <label for="id_modal_province_number"> Número de Distrito: </label>
+                        {{province_modal_add.number_id}}
+                    </div>
+                    <div class="form-group">
+                        <label for="id_modal_province_input" class="mt-2">Provincia: </label>
+                        {{province_modal_add.province}}
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -182,4 +186,7 @@
         </div>
     </form>
 </div>
-{% endblock modals %}
+{% endblock modal_in %}
+
+
+
