--- a/templates/body.html
+++ b/templates/body.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_refs %}
-  <link rel="stylesheet" href="{% static '/static/css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 {% endblock extra_refs %}
 
 
