refactoring changing modals to popups

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -214,3 +214,7 @@ input:-webkit-autofill:focus {
   background-color: #3f6791;
   border: 0px solid #6c757d;
 }
+
+.btn-primary:hover {
+  background-color: #495057;
+}
