--- a/core/sh/templates/office_loc/create.html
+++ b/core/sh/templates/office_loc/create.html
@@ -22,6 +22,7 @@
                         <div class="card-body row">
                             <div class="form-group col-6">
                                 <label for="id_province">Provincia:</label>
+                                <button type="button" class="btn btn-sm btn-dark ml-2 mb-1" id="province_popup_add"><i class="fas fa-plus"></i></button>
                                 {{ form.province }}
                                 {% if form.province.errors %}
                                 <div class="invalid-feedback d-block">
@@ -31,6 +32,7 @@
                             </div>
                             <div class="form-group col-6">
                                 <label for="id_location">Localidad:</label>
+                                <button type="button" class="btn btn-sm btn-dark ml-2 mb-1" id="location_popup_add"><i class="fas fa-plus"></i></button>
                                 {{ form.location }}
                                 {% if form.location.errors %}
                                 <div class="invalid-feedback d-block">
