--- a/core/sh/templates/brand/list.html
+++ b/core/sh/templates/brand/list.html
@@ -8,8 +8,7 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 20%;">Id</thr>
-  <th scope="col" style="width: 60%;">Marca</thr>
+  <th scope="col" style="width: 80%;">Marca</th>
   <th scope="col" style="width: 20%;">Opciones</th>
 
 {% endblock columns %}
@@ -23,7 +22,7 @@
 {% block add_button %}
 
 <a href="{{ create_url }}" type="button" class="btn btn-primary" id="{{btn_add_id}}">
-  <i class="fas fa-plus"></i>Agregar Marca
+  <i class="fas fa-plus"></i> Agregar Marca
 </a>
 
 {% endblock add_button %}
