--- a/core/sh/templates/dev_model/list.html
+++ b/core/sh/templates/dev_model/list.html
@@ -9,11 +9,10 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 5%;">Id</th>
-  <th scope="col" style="width: 20%;">Imagen</th>
-  <th scope="col" style="width: 15%;">Modelo</thr>
+  <th scope="col" style="width: 15%;">Modelo</th>
   <th scope="col" style="width: 20%;">Tipo de Dispositivo</th>
   <th scope="col" style="width: 25%;">Marca</th>
+  <th scope="col" style="width: 25%;">Imagen</th>
   <th scope="col" style="width: 15%;">Opciones</th>
 
 {% endblock columns %}
