--- a/core/sh/templates/office_loc/popup_add.html
+++ b/core/sh/templates/office_loc/popup_add.html
@@ -4,7 +4,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Agregar Edificio</title>
+    <title>Agregar Ubicación de Oficina</title>
     <link rel="stylesheet" href="{% static 'lib/adminlte_3.2.0/dist/css/adminlte.min.css' %}">
     <link rel="stylesheet" href="{% static 'lib/select2_4.1.0/dist/css/select2.min.css' %}">
     <link rel="stylesheet" href="{% static 'lib/select2_4.1.0/dist/css/select2-bootstrap.min.css' %}">
